styles.css
/* .container {
    display: grid;
    /* grid-template-columns: 1fr 1fr 1fr; 
}
*/
/* .top-nav-bar ul {
    padding: 0;
    margin: 16px;

    display: flex;
    list-style-type: none;
    justify-content: flex-end;
}

.top-nav-bar ul > li {
    /* border: 1px solid white; */
    /* margin: 4px; */
    /* padding: 4px; */
    /* background-color: purple; */
    /* align-self: center; */

}

/* Starterly logo */
/* .top-nav-bar ul > li:first-child { */
    /* background-color: tomato; */
    /* flex-grow: 1; */

    /* font-style: italic; */
    /* font-size: 28pt; */
    /* font-weight: bolder; */
}
/*  
.title-section {
    border: 5px solid silver;
    background-color: orange;
}

.title-section h1 {
    display: flex;
    align-items: center;
} */

.container {
    display: grid;
    /* grid-template-rows: repeat(8, 12.5%); */
    grid-template-columns: repeat(4, 1fr);
    padding: 1em;
  } 

.top-nav-bar {
    grid-column: 1 / span 4;
}
  
.navigation {
    /* background-color: tomato; */
    display: flex;
    list-style-type: none;
    justify-content: flex-end;
    padding: 1em;
}
  
.navigation ul {
    /* list-style-type: none; */
    /* margin: 16px; */
    display: flex;
}

.navigation ul > li:first-child { 
    /* background-color: tomato; */
    justify-self: flex-start;

    /* font-style: italic; */
    /* font-size: 28pt; */
    /* font-weight: bolder; */
}


.title-section {
    grid-row: 2 / 3;
    grid-column: 1 / span 4;
  }
  
.title {
    /* background-color: lightgreen; */
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 5%;
    justify-content: space-around
}

.title h1 {
    margin: 0;
}
  
.top-quote-block {
    grid-row: 3 / 4;
    grid-column: 1 / span 4;
}
  
#quote-one {
    /* background-color: orange; */
    padding: 3%
}

#quote-one p {
    display: flex;
    justify-content: flex-end;
    padding-right: 3%
}

.why-company-section {
    grid-row: 4 / 5;
    grid-column: 1 / span 4;
}
  
.about-company {
    /* background-color: lightblue; */
    padding: 5%
}
  
.about-company h2 {
    display: flex;
    justify-content: center;
}
  
.about-company ul {
    display: flex;
    justify-content: space-evenly;
    padding: 3%;
}

.about-company ul li {
    padding-right: 3%
}
  
.second-quote-block {
    grid-row: 5 / 6;
    grid-column: 1 / span 4;
}
  
#quote-two {
    /* background-color: lightpink; */
    padding: 3%
}

#quote-two p {
    display: flex;
    justify-content: flex-end;
    padding-right: 3%
}
  
.meet-team {
    grid-row: 6 / 7;
    grid-column: 1 / span 4;
}
  
.team {
    background-color: hotpink;
    display: flex;
    flex-direction: column;
    padding: 3%
}
  
.team > h2 {
    display: flex;
    justify-content: center;
}
  
.team > ul {
    display: flex;
  /*   flex-wrap: wrap; */
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center
}

.team > ul li {
    padding: 3%;
    flex-wrap: nowrap
}

.team > ul img {
    /* max-width: 100%;
    max-height: 100%; */
    border-radius: 50%;
    padding: 15%;
    
}

/* .team > ul img:first-child {
    display: flex;
    flex-direction: column;
    align-self: flex-start
} */

.all-sponsors-section {
    grid-row: 7 / 8;
    grid-column: 1 / span 4;
}
  
.sponsors {
    background-color: yellow;
    display: flex;
    flex-direction: column;
    padding: 5%
}
  
.sponsors h2 {
    display: flex;
    justify-content: center;
}
  
.sponsors ul {
    display: flex;
    justify-content: space-evenly;
    padding: 3%;
} 

.sponsors ul li {
    display: flex;
    align-items: center;
    padding: 3%;
    
}

li {
    list-style-type: none;
}

.support-and-about {
    display: flex;
    flex-direction: row;
}

.support-and-about ul {
    padding: 0px;
}

  /* .support-and-about {
    display: flex;
  } */
  .support-and-about {
    /* background-color: tomato; */
    grid-row: 8 / 9;
    grid-column: 1 / 2;
    display: flex;
    /* padding: 5%  */
  }

  .support-and-about div {
      padding: 5%
  }
  
  /* .about { */
  /*   background-color: purple; */
  /*   grid-row: 8; */
  /*   grid-column: 2 / 3 */
  /*   padding: 5% */
  /* } 

